# graphics-programming-2023

./: CMakeLists.txt
exercises/exercise00/: main.cpp
exercises/exercise01/: TerrainApplication.cpp
exercises/exercise02/: ParticlesApplication.cpp  ParticlesApplication.h
exercises/exercise02/shaders/: particles.frag  particles.vert
exercises/exercise03/: GearsApplication.cpp  GearsApplication.h
exercises/exercise03/shaders/: basic.frag  basic.vert
exercises/exercise04/: TexturedTerrainApplication.cpp  TexturedTerrainApplication.h
exercises/exercise04/shaders/: terrain.frag  terrain.vert  water.frag  water.vert
exercises/exercise05/: ViewerApplication.cpp  ViewerApplication.h
exercises/exercise05/shaders/: blinn-phong.frag  blinn-phong.vert  quad.frag  quad.vert  shadow.vert
experiments/clouds/: CMakeLists.txt  Cloud.cpp  Cloud.hpp  CloudApplication.cpp  CloudApplication.hpp  Controller.cpp  Controller.hpp  Cube.cpp  Cube.hpp  main.cpp
experiments/clouds/shaders/: cloud.frag  cloud.vert  sun.vert  unlit.frag  unlit.vert
experiments/particles/: CMakeLists.txt  Particle.cpp  Particle.h  Particles.cpp  Particles.h  main.cpp
libraries/itugl/: CMakeLists.txt
libraries/itugl/include/ituGL/core/: DeviceGL.h
libraries/itugl/include/ituGL/texture/: Texture3DObject.h
libraries/itugl/src/ituGL/application/: Window.cpp
libraries/itugl/src/ituGL/camera/: Camera.cpp
libraries/itugl/src/ituGL/core/: BufferObject.cpp  DeviceGL.cpp
libraries/itugl/src/ituGL/geometry/: VertexArrayObject.cpp
libraries/itugl/src/ituGL/shader/: Shader.cpp  (+1 more)
(+1 files in other folders)
